[package]
name = "dust-cleaner"
version = "0.1.0"
edition = "2021"
description = "Detect and safely remove Bitcoin dust attack UTXOs using PSBT"
license = "MIT"
repository = "https://github.com/Jolah1/dust-cleaner"
keywords = ["bitcoin", "psbt", "utxo", "privacy", "dust"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["rand-std"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde_json = "1.0.149"
hex = "0.4"
